# FiskCompiler

./: .runsettings  CMakeLists.txt  README.md  RecomendedSetupWin.bat
data/data/: help.txt  warnings.txt
data/test/precompiler/line_joiner/: 1_basic.txt  2_joined.txt  3_empty.txt  3_empty_2.txt  3_empty_3.txt
src/: CMakeLists.txt
src/common/: CMakeLists.txt  CompilerContext.cpp  CompilerContext.h  FeatureSwitch.cpp  FeatureSwitch.h  HelpPrinter.cpp  HelpPrinter.h  IteratorRange.h  Utility.h
src/executable/: CMakeLists.txt  main.cpp  main.h
src/markup/: CMakeLists.txt  Concepts.h  Pattern.cpp  Pattern.h  Patterns.cpp  Patterns.h
src/precompiler/: CMakeLists.txt  FileReader.cpp  FileReader.h  IncludeFilter.cpp  IncludeFilter.h  IncludeFinder.cpp  IncludeFinder.h  LineJoiner.cpp  LineJoiner.h  LineReader.cpp  LineReader.h  Types.cpp  Types.h  precompiler.cpp  precompiler.h
src/standard_libraries/: CMakeLists.txt
src/standard_libraries/std/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/tests/catch_precompiler/: CMakeLists.txt  FileReader.cpp  LineJoiner.cpp  LineReader.cpp  SourceLine.cpp  UnpackingIterator.cpp
src/tokenizer/: CMakeLists.txt  token.cpp  token.h  tokenMatcher.cpp  tokenMatcher.h  tokenStream.cpp  tokenStream.h  tokenizer.cpp  tokenizer.h
src/tools/: CmakeLists.txt  fileHelpers.cpp  fileHelpers.h
